# mup-astro-cat

./: LICENSES  README.md
docs/: building.md  indi_driver.md  installation.md  testing.md
eeprom/: eeprom_settings.txt  mup-astro-hat.dts  mup_astro_cat.dts
indi_driver/: CMakeLists.txt
indi_driver/cmake_modules/: FindWiringPi.cmake
indi_driver/indi-mupastrocat/: indi_mupastrocat.xml  motorcontroller.cpp  motorcontroller.h  mupastrocat.cpp  mupastrocat.h
